- updated to use newest java-util - migrating MetaUtils methods/APIs to StringUtilities, ExceptionUtilities, ClassUtilities